version 1.6.6, in progress
- Fix for loop on empty list
- Fix for remaining issues with apostrophes in graph titles
- Fix for lists as arguments for user-defined functions
- Add "ceil" function in genr

5/17/2007 version 1.6.5
- Fix new breakage in configuration of user directory
- Updates to manual
- Mark some more strings for translation
- Add new menu set /Tools/Nonparametric tests, with GUI
  access to the "difftest" and "runs" commands
- Add --difference option for runs command
- Various small bug-fixes

5/13/2007 version 1.6.4
- Fix breakage in relation to the Windows registry
- Fixes for accented characters in graphs, on systems with
  UTF-8 as the standard character encoding
- Additional fixes for Polish text in graphs

5/10/2007 version 1.6.3
- Add facility for bootstrap analysis in GUI, for OLS
- Model table: fixes for including panel models; allow up to
  12 models; formatting enhancements
- Fix bug in panel autocorrelation test (lmtest command)
- Add fft() matrix function (Fast Fourier Transform)
- Add cmult() matrix function (complex multiplication)
- Add quantile() function in genr
- Add production of restricted estimates to the "restrict"
  command as applied to VECMs
- Multiple fixes for session icon handling
- LAD models: print the median of the dependent variable
- Matrix properties window in GUI: add an indication of whether
  or not a square matrix is idempotent
- Panel data, pooled OLS model: when robust standard errors are
  chosen, use the Arellano-type HAC estimator (well, it's HAC
  when the time-series dimension is small); also offer Beck-Katz
  Panel Corrected Standard Errors
- Apply the above to tsls in a panel context also
- Panel data, "summary" command for single variable: show the
  within and between standard deviations
- Add "--quiet" option to lmtest command (don't print the
  auxiliary regression)
- Observation labels: ensure these are properly XML-encoded when
  saving a data set as gdt