@@ -2,6 +2,9 @@ version 1.6.6, in progress
 - Fix for loop on empty list
 - Fix for remaining issues with apostrophes in graph titles
 - Fix for lists as arguments for user-defined functions
+- Fix for saved sessions after using Forecast menu items
+- Fix for long variable names in Model Graph menus
+- Improve formatting for nonparametric difference test
 - Add "ceil" function in genr
 
 5/17/2007 version 1.6.5
